--- a/coding&debugging.html
+++ b/coding&debugging.html
@@ -44,11 +44,11 @@ Participants are asked to solve the given problem with their preferred language.
 
       
 <br>RULES:<br>
-[Participants should bring their own PC]<br>
-<li>1. Participants who pass each round can be move to next round</li><br>
-<li>2. No external resources are allowed.</li><br>
-<li>3. Participants should complete their respective rounds within time limit.</li><br>
-<li>4. Participants who undergo malpractice will be eliminated.</li><br>
+<li>Participants should bring their own PC<li><br>
+<li>Participants who pass each round can be move to next round</li><br>
+<li>No external resources are allowed.</li><br>
+<li>Participants should complete their respective rounds within time limit.</li><br>
+<li>Participants who undergo malpractice will be eliminated.</li><br>
 
 
 
@@ -61,18 +61,8 @@ Gnanasekaran: 9080181973<br>
 yuvaraj: 7548862259
 <br><br>
 
-
-Judges:<br>
-1:Priyadarshini<br>
-2:Gokul<br>
-3:Gnanasekaran<br>
-yuvaraj
 </h3>		
 <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
-
-
-
-
 
 				</div>
 
