--- a/coding&debugging.html
+++ b/coding&debugging.html
@@ -44,7 +44,7 @@ Participants are asked to solve the given problem with their preferred language.
 
       
 <br>RULES:<br>
-<li>Participants should bring their own PC<li><br>
+<li>Participants should bring their own PC</li><br>
 <li>Participants who pass each round can be move to next round</li><br>
 <li>No external resources are allowed.</li><br>
 <li>Participants should complete their respective rounds within time limit.</li><br>
