--- a/chess.html
+++ b/chess.html
@@ -7,7 +7,19 @@
 	<link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
-
+<!-----nav------>
+<nav>
+	<label class="logo">Revibe '22</label>
+	<ul>
+		<li><a class="active" href="Events.html">Events</a></li>
+		<li><a class="active" href="SGC.html">About SGC</a></li>
+		<li><a class="active" href="location.html">Location</a></li>
+		<li><a class="active" href="Timing.html">Events Timings</a></li>
+		<li><a class="active" href="Revibe2020.html">Revibe 2020</a></li>
+		<li><a class="active" href="https://forms.gle/d3miDSY9ZQU6eo4P8">Register</a></li>
+	</ul>
+</nav>
+<!-----nav-end------>
 	<section class="ch" id="ch">
 		<div class="box-container">
 			<h1 class="heading"><span>Chess</span></h1>
@@ -18,9 +30,9 @@
 <br><br>
         Registration fee: Rs ₹50 
 <br><br>
-        Timing :<i>11.00 am-12.30 PM</i>
+        Timing :<i>11.00 am - 12.30 PM</i>
 <br><br>
-        Venue: <i>Auditorium</i>
+        Venue: <i>Aero seminar hall</i>
 <br><br>
 Rules:
 <li>Chess rules and regulations say the player with white pieces always makes the first move. </li><br>
@@ -47,15 +59,8 @@ Waseem : 9952374972<br>
 yuvaraj: 7548862259<br>
 Sathakathulla: 6385356926
 <br><br>
-
-
-Judges:<br>
-1:Waseem<br>
-2:yuvaraj<br>
-3:Sathakathulla
 </h3>		
 <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
-
 
 
 				</div>
