--- a/connections.html
+++ b/connections.html
@@ -7,7 +7,19 @@
 	<link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
-
+<!-----nav------>
+<nav>
+	<label class="logo">Revibe '22</label>
+	<ul>
+		<li><a class="active" href="Events.html">Events</a></li>
+		<li><a class="active" href="SGC.html">About SGC</a></li>
+		<li><a class="active" href="location.html">Location</a></li>
+		<li><a class="active" href="Timing.html">Events Timings</a></li>
+		<li><a class="active" href="Revibe2020.html">Revibe 2020</a></li>
+		<li><a class="active" href="https://forms.gle/d3miDSY9ZQU6eo4P8">Register</a></li>
+	</ul>
+</nav>
+<!-----nav-end------>
 	<section class="conc" id="conc">
 		
 		<div class="box-container">
@@ -27,13 +39,13 @@
         Venue: <i>MBA seminar hall</i>
 <br><br>
 Rules:
-<li>1.Each team will have maximum of 3 members & minimum of 1 member.</li><br>
-<li>2.Paper and pen will be provided to each team.</li><br>
-<li>3.Image will be shown in the screen, Everyone should write the corresponding answers in the paper.</li><br>
-<li>4.After every round the paper will be collected and evaluated.</li><br>
-<li>5.Every correct answer will be awarded +10 points and Every wrong answer will be awarded -5 marks.</li><br>
-<li>6.Questions are related to non- Technical aspects.</li><br>
-<li>7.Number of rounds depends on number of teams.</li><br>
+<li>Each team will have maximum of 3 members & minimum of 1 member.</li><br>
+<li>Paper and pen will be provided to each team.</li><br>
+<li>Image will be shown in the screen, Everyone should write the corresponding answers in the paper.</li><br>
+<li>After every round the paper will be collected and evaluated.</li><br>
+<li>Every correct answer will be awarded +10 points and Every wrong answer will be awarded -5 marks.</li><br>
+<li>Questions are related to non- Technical aspects.</li><br>
+<li>Number of rounds depends on number of teams.</li><br>
 
 
 
@@ -45,11 +57,6 @@ Jeyamurugan: 6374398086<br>
 Rafique: 983988538
 <br><br>
 
-
-Judges:<br>
-1:Arun srinivasan<br>
-2:Jeyamurugan<br>
-3:Rafique
 </h3>		
 <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
 
