--- a/cwf.html
+++ b/cwf.html
@@ -7,7 +7,19 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<!-----nav------>
+<nav>
+	<label class="logo">Revibe '22</label>
+	<ul>
+		<li><a class="active" href="Events.html">Events</a></li>
+		<li><a class="active" href="SGC.html">About SGC</a></li>
+		<li><a class="active" href="location.html">Location</a></li>
+		<li><a class="active" href="Timing.html">Events Timings</a></li>
+		<li><a class="active" href="Revibe2020.html">Revibe 2020</a></li>
+		<li><a class="active" href="https://forms.gle/d3miDSY9ZQU6eo4P8">Register</a></li>
+	</ul>
+</nav>
+<!-----nav-end------>
 	<section class="cwf" id="cwf">
 
 		<div class="box-container">
@@ -23,34 +35,29 @@
 <br><br>
         Registration fee: Rs 100/-
 <br><br>
-        Timing :<i>10 AM-12 PM</i>
+        Timing :<i>10 AM - 12.30 PM</i>
 <br><br>
         Venue: <i>Auditorium</i>
 <br><br>
       
 RULES AND REGULATIONS:
- <li>1. Participants should not bring any pre-cooked items.</li><br>
-<li>2. Two members should be in a team to participate in the event</li><br>
-<li>3.Participants are supposed to display a chart having the name, ingredients and calorie count each< dish they have prepared.</li><br>
-<li>4.All the items required for cooking should be brought by the participants themselves, including water, Only working table will be provided.</li><br>
-<li>5.Participants should not bring any cut, chopped or grates raw materials. They should process it on the spot within allotted time.</li><br>
-<li>6.Participants can bring non-electric equipments like mixer, chopper, juicer, grater etc..</li><br>
-<li>7.The evaluation will be based on the taste of the dish, nutritional level, cleanliness and presentation, unique name of the dish</li><br>
+ <li>Participants should not bring any pre-cooked items.</li><br>
+<li>Two members should be in a team to participate in the event</li><br>
+<li>Participants are supposed to display a chart having the name, ingredients and calorie count each< dish they have prepared.</li><br>
+<li>All the items required for cooking should be brought by the participants themselves, including water, Only working table will be provided.</li><br>
+<li>Participants should not bring any cut, chopped or grates raw materials. They should process it on the spot within allotted time.</li><br>
+<li>Participants can bring non-electric equipments like mixer, chopper, juicer, grater etc..</li><br>
+<li>The evaluation will be based on the taste of the dish, nutritional level, cleanliness and presentation, unique name of the dish</li><br>
 
 
 
 For any querys:<br>
 Contact the co-ordinators:<br> 
 Siva priya: 9789768209<br>
-vahitha: 9042529779<br>
-swetha: 9345047874
+Vahitha: 9042529779<br>
+Shwetha: 9345047874
 <br><br>
 
-
-Judges:<br>
-1:staff1<br>
-2:staff2<br>
-3:staff3
 </h3>		
 <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
 
