--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 </body>
 
 <!----footer--->
-<footer>
-    <center>&copy;Student's Guidence Cell<sup>TM</sup>All rights
-        reserved-2010,E-mail:studentguidancecell.cachet@gmail.com</center>
-</footer>
+<footer style="font-size: 16px;">
+    &copy;Student's Guidence Cell<sup>TM</sup> All rights
+        reserved-2010,<br>E-mail:<a href="mailto:studentguidancecell.cachet@gmail.com">studentguidancecell.cachet@gmail.com</a>
+</footer> 
 <!------------->
 
 </html>
