--- a/photography.html
+++ b/photography.html
@@ -7,6 +7,19 @@
 	<link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
+	<!-----nav------>
+    <nav>
+        <label class="logo">Revibe '22</label>
+        <ul>
+            <li><a class="active" href="Events.html">Events</a></li>
+            <li><a class="active" href="SGC.html">About SGC</a></li>
+            <li><a class="active" href="location.html">Location</a></li>
+            <li><a class="active" href="Timing.html">Events Timings</a></li>
+            <li><a class="active" href="Revibe2020.html">Revibe 2020</a></li>
+            <li><a class="active" href="https://forms.gle/d3miDSY9ZQU6eo4P8">Register</a></li>
+        </ul>
+    </nav>
+    <!-----nav-end------>
 
 	<section class="photo" id="photo">
 
