--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,19 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<!-----nav------>
+<nav>
+	<label class="logo">Revibe '22</label>
+	<ul>
+		<li><a class="active" href="Events.html">Events</a></li>
+		<li><a class="active" href="SGC.html">About SGC</a></li>
+		<li><a class="active" href="location.html">Location</a></li>
+		<li><a class="active" href="Timing.html">Events Timings</a></li>
+		<li><a class="active" href="Revibe2020.html">Revibe 2020</a></li>
+		<li><a class="active" href="https://forms.gle/d3miDSY9ZQU6eo4P8">Register</a></li>
+	</ul>
+</nav>
+<!-----nav-end------>
 
 	<section class="quiz" id="quiz">
 
@@ -25,7 +37,7 @@
         Registration fee:₹50 per head .
 		
 <br><br>
-        Timing :<i>1 hrs</i>
+        Timing :<i>10.00am - 11.00am</i>
 <br><br>
         Venue: <i>MBA Seminor hall</i>
 <br><br>
@@ -36,7 +48,7 @@ RULES:
 <li>2nd round 10 questions will be asked.</li><br>
 <li>3rd round 5 questions will be asked.</li><br>
 <li>Each questions carries 5 points</li><br>
-<li>Negative -5  marks for Wrong answers and if any team say’s the answer before the question completion</li><br>
+<li>Negative -5  marks for Wrong answers and if any team say the answer before the question completion</li><br>
 <li>The  High Scoring teams will be rewarded</li><br>
 <li>The question will be asked on Technical based questions</li><br>
 
@@ -51,11 +63,6 @@ Prakash: 9487821387<br>
 Jayamurugan: 63743998086
 <br><br>
 
-
-Judges:<br>
-1:Arun<br>
-2:Prakash<br>
-3:Jayamurugan
 </h3>		
 <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
 
