--- a/web.html
+++ b/web.html
@@ -7,6 +7,19 @@
 	<link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
+        <!-----nav------>
+    <nav>
+        <label class="logo">Revibe '22</label>
+        <ul>
+            <li><a class="active" href="Events.html">Events</a></li>
+            <li><a class="active" href="SGC.html">About SGC</a></li>
+            <li><a class="active" href="location.html">Location</a></li>
+            <li><a class="active" href="Timing.html">Events Timings</a></li>
+            <li><a class="active" href="Revibe2020.html">Revibe 2020</a></li>
+            <li><a class="active" href="https://forms.gle/d3miDSY9ZQU6eo4P8">Register</a></li>
+        </ul>
+    </nav>
+    <!-----nav-end------>
 <section class="web" id="web">
 
 <div class="box-container">
@@ -19,36 +32,25 @@
 
       <h3>   Topic: <i>Onspot Topic.</i>
 <br><br>
-        Entry fee: <i>Rs.150 per team.</i>
+        Entry fee: <i>Rs.100 per team.</i>
 <br><br>
-        Timing :<i> 2.00 hrs.</i>
+        Timing :<i> 1.30pm - 3.30pm.</i>
 <br><br>
         Venue: <i>MBA Seminor hall</i>
 <br><br>
         Team Members allowed : <i>1-4 member allowed per team</i>
 <br><br>
 Rules:
-  <li>1.Dont copy code from Github or any other resources.</li><br>
-  <li>2.Only 1-4 members allowed for a team.</li><br>
-  <li>3.You can use any language for backend.</li><br>
-  <li>4.You should not use your mobile phone.</li><br>
-  <li>5.Mobile phone is used for only internet connectivity only on the time of competation if you need ,other wise no.</li><br>
-  <li>6.You should submit you project design on time otherwise your team will be eliminated form the contest.</li><br>
-  <li>7.Topic will be given on the spot .</li><br>
+  <li>Dont copy code from Github or any other resources.</li><br>
+  <li>Only 1-4 members allowed for a team.</li><br>
+  <li>You can use any language for backend.</li><br>
+  <li>You should not use your mobile phone.</li><br>
+  <li>Mobile phone is used for only internet connectivity only on the time of competation if you need ,other wise no.</li><br>
+  <li>You should submit you project design on time otherwise your team will be eliminated form the contest.</li><br>
+  <li>Topic will be given on the spot .</li><br>
 
 
-For any querys:<br>
-Contact the co-ordinators :<br> 
-Kamalesh: 9361273341<br>
-Prakash: 9487821387<br>
-Gananasekaran: 9080181973
-<br><br>
 
-
-Judges:<br>
-1:Kamalesh.<br>
-2:Prakash<br>
-3:Gananasekaran
 </h3>		
 <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
 		
