Commited by Siva

--- a/Revibe2020.html
+++ b/Revibe2020.html
@@ -25,20 +25,20 @@
 
 	
     
-     <section class="last">
-        <img src="IMG_20200306_194959.jpg" alt="" width="250px" height="170px">
-        <img src="IMG_1986.JPG" alt="" width="250px" height="170px">
-        <img src="IMG_2530.JPG" alt="" width="250px" height="170px">
-        <img src="IMG_20200306_175635.jpg" alt="" width="250px" height="170px">
-        <img src="IMG_1763.JPG" alt="" width="250px" height="170px">
-        <img src="IMG_1897.JPG" alt="" width="250px" height="170px">
-        <img src="IMG_2826.JPG" alt="" width="250px" height="170px">
-        <img src="IMG_2819.JPG" alt="" width="250px" height="170px">
-        <img src="Revibe19.jpeg" alt="" width="250px" height="170px">
-        <img src=" IMG_2755.JPG" alt="" width="250px" height="170px">
-        <img src=" PSX_20200312_055025.jpg" alt="" width="280px" height="170px">
-        <img src=" IMG_2004.JPG" alt="" width="250px" height="170px">
-    </section>
+     <div class="last">
+        <img src="images/Revibe2020/IMG_20200306_194959.jpg" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/IMG_1986.JPG" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/IMG_2530.JPG" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/IMG_20200306_175635.jpg" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/IMG_1763.JPG" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/IMG_1897.JPG" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/IMG_2826.JPG" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/IMG_2819.JPG" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/Revibe19.jpeg" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/IMG_2755.JPG" alt="" width="250px" height="170px">
+        <img src="images/Revibe2020/IMG_2973.JPG" alt="" width="280px" height="170px">
+        <img src="images/Revibe2020/IMG_2004.JPG" alt="" width="250px" height="170px">
+     </div>
 
 
 </body>
