--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <!-----nav-end------>
 
     <div>
-        <img src="images/Clg.png" width="30%">
+        <center><img src="images/HorizontalCollegeName.png" width="80%"><br>
+            <img src="images/HorizontalSGCName.png" width="30%"></center> 
     </div>
     <!----------->
 
