--- a/photography.html
+++ b/photography.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Photography</title>
-	<link rel="stylesheet"  href="css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Photography</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-	<!-----nav------>
+    <!-----nav------>
     <nav>
         <label class="logo">Revibe '22</label>
         <ul>
@@ -21,89 +23,85 @@
     </nav>
     <!-----nav-end------>
 
-	<section class="photo" id="photo">
+    <section class="photo" id="photo">
 
 
-		<div class="box-container">
+        <div class="box-container">
 
-			<h1 class="heading"> Photo<span>graphy</span></h1>
-			
-			<div class="box">
+            <h1 class="heading"> Photo<span>graphy</span></h1>
 
-
-
-			<div class="box">
-
-
-					      <h3>   Topic: <li><i>i.	Category 1:
-Open photography ( you can use any topic here but you have to mention the reason why you have chosen this topic & you should add a caption below the post)
-</i></li>
-<li><i>ii.	Category 2:
-•	Natural photography
-•	Candid moments
-•	College Architecture
-•	Beautiful landscape
-•	Reflection
-•	Something that makes you laugh
-•	Something that makes you feel nostalgic
-</i></li>
-<br>
-        Registration fee:₹50 per head 
-
-<br><br>
-        Timing :<i>10:00am-1:00pm</i>
-<br><br>
-        Venue: <i>Auditorium</i>
-<br><br>
-      
-RULES:
-  <li>1.Event will be Conducted within the campus only</li>
-  <li>1.Photo should be uploaded on Instagram by tagging sgc id and hashtag.</li><br>
-  <li>2.Everyone should submit the photo within the given time.</li><br>
-  <li>3.There should a caption below the post & meaning of the photo.</li><br>
-  <li>4	No DSLR camera should be used, you should only use the Mobile camera </li><br>
-  <li>5.Photoshop should not be done, you can edit the picture.</li><br>
-  <li>6.There should be no water mark</li><br>
-  <li>7.No irrelevant pictures should be uploaded.</li><br>
-  <li>8.Mention the category below the a post and the topic which has chosen</li><br>
-  <li>9.If you fail to give your response on time or you violate any of the rules, you’ll be rejected & there will be no refund/li><br>
-  	<li>10. Pictures should be taken 
+            <div class="box">
 
 
 
+                <div class="box">
 
 
-For any querys:<br>
-Contact the co-ordinators:<br> 
-Tajjamul: 8124461744<br>
-Rafique: 983988538<br>
-Lokesh: 7667186387
-<br><br>
+                    <h3> Topic: <li><i>i. Category 1:
+                                Open photography ( you can use any topic here but you have to mention the reason why you
+                                have chosen this topic & you should add a caption below the post)
+                            </i></li>
+                        <li><i>ii. Category 2:
+                                • Natural photography
+                                • Candid moments
+                                • College Architecture
+                                • Beautiful landscape
+                                • Reflection
+                                • Something that makes you laugh
+                                • Something that makes you feel nostalgic
+                            </i></li>
+                        <br>
+                        Registration fee:₹50 per head
 
+                        <br><br>
+                        Timing :<i>10:00am-1:00pm</i>
+                        <br><br>
+                        Venue: <i>Auditorium</i>
+                        <br><br>
 
-Judges:<br>
-1:Tajjamul<br>
-2:Rafique<br>
-3:Lokesh
-</h3>		
-<a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
-				
+                        RULES:
+                        <ol>
+                            <li>Event will be Conducted within the campus only</li>
+                            <li>Photo should be uploaded on Instagram by tagging sgc id and hashtag.</li><br>
+                            <li>Everyone should submit the photo within the given time.</li><br>
+                            <li>There should a caption below the post & meaning of the photo.</li><br>
+                            <li>DSLR or mobile camera can be used.</li><br>
+                            <li>Photoshop should not be done, you can edit the picture.</li><br>
+                            <li>There should be no water mark</li><br>
+                            <li>No irrelevant pictures should be uploaded.</li><br>
+                            <li>Mention the category below the a post and the topic which has chosen</li><br>
+                            <li>If you fail to give your response on time or you violate any of the rules, you’ll be
+                                rejected & there will be no refund </li><br>
+                            <li>Pictures should be taken on the day of the event. </li>
+                        </ol>
+
+                        For any querys:<br>
+                        Contact the co-ordinators:<br>
+                        Tajjamul: 8124461744<br>
+                        Rafique: 9843988538<br>
+                        Bilal: 6383071076<br><br>
+
+                    </h3>
+                    <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span
+                            class="fas fa-chevron-right"></span> </a>
 
 
 
 
-			</div>
+
+                </div>
 
 
-		</div>
+            </div>
 
 
-		</div>
+        </div>
 
 
 
 
-	</section>
+    </section>
 
 </body>
+
 </html>
