--- a/chess.html
+++ b/chess.html
@@ -28,7 +28,7 @@
 					
 					<h3>   Topic: <i>Chess</i>
 <br><br>
-        Registration fee: Rs ₹50 
+        Registration fee: Rs.₹50 per head. 
 <br><br>
         Timing :<i>11.00 am - 12.30 PM</i>
 <br><br>
@@ -42,10 +42,10 @@ Chess Rule Pawn Promotion:
 <li>The chess rule promotion applies to pawns. Each pawn has a special ability to gain promotion to the role of any other piece. But, the pawn must reach the other side of the board before it can become another chess piece.</li><br>
 
 Chess Castling:
-<li>1.It must be the first move of that particular king</li><br>
-<li>2.It must be the first move of that particular rook</li><br>
-<li>3.There must be no pieces between the king and that rook</li><br>
-<li>4.You cannot castle if your king is in check or moves into check</li><br>
+<li>It must be the first move of that particular king</li><br>
+<li>It must be the first move of that particular rook</li><br>
+<li>There must be no pieces between the king and that rook</li><br>
+<li>You cannot castle if your king is in check or moves into check</li><br>
 
 Stalemate :
 <li>Stalemate is a kind of draw that happens when one side has NO legal moves to make. If the king is NOT in check, but no piece can be moved without putting the king in check, then the game will end with a stalemate draw! </li><br>
