--- a/cwf.html
+++ b/cwf.html
@@ -33,7 +33,7 @@
 
 				      <h3>   Topic: <i>Cooking Without Fire</i>
 <br><br>
-        Registration fee: Rs 100/-
+        Registration fee: Rs.₹100/-
 <br><br>
         Timing :<i>10 AM - 12.30 PM</i>
 <br><br>
