--- a/meme.html
+++ b/meme.html
@@ -42,7 +42,7 @@
 
 </i></li>
 <br>
-        Registration fee:₹50 .
+        Registration fee:₹50 per head.
 <br><br>
         Timing :<i>10 am - 11 am</i>
 <br><br>
@@ -74,10 +74,7 @@ Lokesh: 7667186387
 <br><br>
 
 
-Judges:<br>
-1:Mohana priya<br>
-2:Bilal<br>
-3:Lokesh
+
 </h3>		
 <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
 
