--- a/memory.html
+++ b/memory.html
@@ -35,7 +35,7 @@
 
 						  <h3>   Topic: <i>Memory Game</i>
 <br><br>
-        Registration fee: Rs ₹50 
+        Registration fee: Rs.₹50 per head. 
 <br><br>
         Timing :<i>2.00 Pm-3.30 PM</i>
 <br><br>
@@ -44,12 +44,12 @@
 Rules:
 <li>What is the Memory Game?</li><br>
 <li>Often the games that are the most simple are also the most entertaining, and this is certainly the case with the Memory Game.</li><br>
-<li>1.Certain questions will be projected based on the levels., i,e,For first round the questions will be easier ; For the second the questions will be tougher than the first round..like wise.</li><br>
-<li>2.A paper and pen is allowed for doing few problamatic questions. </li><br>
-<li>3.No electronic gadjets are allowed during the game. </li><br>
-<li>4.Discussion with other participants is also not allowed.</li><br>
-<li>5.For each question there is a gap of few seconds timing which will be given to solve the questions. Eg(10sec).</li><br>
-<li>6.It is a individual participating game.. (i.e, its not an Team game).</li><br>
+<li>Certain questions will be projected based on the levels., i,e,For first round the questions will be easier ; For the second the questions will be tougher than the first round..like wise.</li><br>
+<li>A paper and pen is allowed for doing few problamatic questions. </li><br>
+<li>No electronic gadjets are allowed during the game. </li><br>
+<li>Discussion with other participants is also not allowed.</li><br>
+<li>For each question there is a gap of few seconds timing which will be given to solve the questions. Eg(10sec).</li><br>
+<li>It is a individual participating game.. (i.e, its not an Team game).</li><br>
 
 
 
@@ -63,10 +63,7 @@ Sathakathulla: 6385356926
 <br><br>
 
 
-Judges:<br>
-1:Sneha<br>
-2:Swetha<br>
-3:Sathakathulla
+
 </h3>		
 <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
 
