--- a/photography.html
+++ b/photography.html
@@ -60,8 +60,8 @@
                         <br><br>
 
                         RULES:
-                        <ol>
-                            <li>Event will be Conducted within the campus only</li>
+                        <ul>
+                            <li>Event will be Conducted within the campus only</li><br>
                             <li>Photo should be uploaded on Instagram by tagging sgc id and hashtag.</li><br>
                             <li>Everyone should submit the photo within the given time.</li><br>
                             <li>There should a caption below the post & meaning of the photo.</li><br>
@@ -73,7 +73,8 @@
                             <li>If you fail to give your response on time or you violate any of the rules, you’ll be
                                 rejected & there will be no refund </li><br>
                             <li>Pictures should be taken on the day of the event. </li>
-                        </ol>
+                        </ul><br>
+                        <br>
 
                         For any querys:<br>
                         Contact the co-ordinators:<br>
