--- a/web.html
+++ b/web.html
@@ -32,7 +32,7 @@
 
       <h3>   Topic: <i>Onspot Topic.</i>
 <br><br>
-        Entry fee: <i>Rs.100 per team.</i>
+        Entry fee: <i>Rs.₹50 per head.</i>
 <br><br>
         Timing :<i> 1.30pm - 3.30pm.</i>
 <br><br>
