--- a/coding&debugging.html
+++ b/coding&debugging.html
@@ -35,7 +35,7 @@
 				<div class="box">
 					      <h3>   Topic: <i>CODING and DEBUGGING:</i>
 <br><br>
-        Registration fee: Rs 50/-
+        Registration fee: Rs.₹50 per head.
 <br><br>
         Timing :<i>10 AM-12.30 PM</i>
 <br><br>
