--- a/ppt.html
+++ b/ppt.html
@@ -32,7 +32,7 @@
 
 				      <h3>   Topic: <i>Open Topic.</i>
 <br><br>
-        Registration fee: Rs 100/-
+        Registration fee: Rs.₹100 per head.
 <br><br>
         Timing :<i>10 AM-4 PM</i>
 <br><br>
@@ -40,11 +40,11 @@
 <br><br>
       
 RULES AND REGULATIONS:
-  <li>1.	Minimum 1 participants and Maximum 3 participants</li><br>
-  <li>2.	Keep your presentation under 5-6 mins</li><br>
-  <li>3.	Don’t overload your presentation with animations</li><br>
-  <li>4.	For every slide ,use no more than seven lines of text (or) seven bullet points and no more than seven words per line</li><br>
-  <li>5.	Send your ppt to this mail id( paperpresentation2k22@gmail.com) with your name and college before or on 27-05-2022</li><br>
+  <li>Minimum 1 participants and Maximum 3 participants</li><br>
+  <li>Keep your presentation under 5-6 mins</li><br>
+  <li>Don’t overload your presentation with animations</li><br>
+  <li>For every slide ,use no more than seven lines of text (or) seven bullet points and no more than seven words per line</li><br>
+  <li>Send your ppt to this mail id( paperpresentation2k22@gmail.com) with your name and college before or on 27-05-2022</li><br>
 
 
 
@@ -57,10 +57,7 @@ Lokesh: 7667186387
 <br><br>
 
 
-Judges:<br>
-1:staff1<br>
-2:staff2<br>
-3:staff3
+
 </h3>		
 <a href="https://forms.gle/d3miDSY9ZQU6eo4P8" class="btn"> Register <span class="fas fa-chevron-right"></span>  </a>
 
