Commit of Siva: Photography rule modification

--- a/photography.html
+++ b/photography.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="./images/Logo.png" type="image/x-icon">
+
     <title>Photography</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -66,7 +68,7 @@
                             <li>Everyone should submit the photo within the given time.</li><br>
                             <li>There should a caption below the post & meaning of the photo.</li><br>
                             <li>DSLR or mobile camera can be used.</li><br>
-                            <li>Photoshop should not be done, you can edit the picture.</li><br>
+                            <li>Editing the image's highlights, shadows and saturation are only allowed. </li><br>
                             <li>There should be no water mark</li><br>
                             <li>No irrelevant pictures should be uploaded.</li><br>
                             <li>Mention the category below the a post and the topic which has chosen</li><br>
