--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Revibe '22</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="./images/Logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
