--- a/ppt.html
+++ b/ppt.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="./images/Logo.png" type="image/x-icon">
+
 	<title>Paper presentation</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
